--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -2,7 +2,7 @@ name: Build
 on: [push, workflow_dispatch]
 jobs:
   build:
-    runs-on: ubunty-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
@@ -11,7 +11,7 @@ jobs:
           path: dist
   deploy:
     needs: build
-    runs-on: ubunty-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Get build artifacts
         uses: actions/download-artifact@v3
