--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -5,7 +5,7 @@ env:
   GH_SECRET: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
 jobs:
   build:
-    runs-on: ubunty-latest
+    runs-on: ubuntu-latest
     env:
       NODE_ENV: job prod
     steps:
@@ -14,7 +14,7 @@ jobs:
           echo "${{ env.NODE_ENV }}"
           echo "${{ env.GH_SECRET }}"
   deploy:
-    runs-on: ubunty-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Print env deploy
         run: |
