--- a/.github/workflows/artifacts.yaml
+++ b/.github/workflows/artifacts.yaml
@@ -4,11 +4,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get project code
+        uses: actions/checkout@v3
+      - name: Install Deps
+        run: npm ci
+      - name: Build project
+        run: npm run build
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-files
-          path: dist
+          name: build-files
+          path: build
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -16,5 +22,4 @@ jobs:
       - name: Get build artifacts
         uses: actions/download-artifact@v3
         with:
-          name: dist-files
-          path: dist
+          name: build-files
