--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -1,5 +1,5 @@
 name: Environment
-on: [push, workflow_dispatch]
+on: [workflow_dispatch]
 env:
   NODE_ENV: production
   GH_SECRET: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
